language/move-lang/tests/move_check/parser/struct_native_with_fields.exp
error: 

   ┌── tests/move_check/parsing/struct_native_with_fields.move:3:21 ───
   │
 3 │     native struct S { f: u64 }
   │                     ^ Unrecognized Token: {
   ·
 3 │     native struct S { f: u64 }
   │                     - Expected:  ";",
   │

